@@ -11,6 +11,11 @@
   <property name="modal">True</property>
   <property name="resizable">False</property>
   <property name="destroy_with_parent">False</property>
+  <property name="decorated">True</property>
+  <property name="skip_taskbar_hint">False</property>
+  <property name="skip_pager_hint">False</property>
+  <property name="type_hint">GDK_WINDOW_TYPE_HINT_DIALOG</property>
+  <property name="gravity">GDK_GRAVITY_NORTH_WEST</property>
   <property name="has_separator">True</property>
 
   <child internal-child="vbox">
@@ -33,6 +38,7 @@
 	      <property name="label">gtk-cancel</property>
 	      <property name="use_stock">True</property>
 	      <property name="relief">GTK_RELIEF_NORMAL</property>
+	      <property name="focus_on_click">True</property>
 	      <property name="response_id">-6</property>
 	    </widget>
 	  </child>
@@ -45,6 +51,7 @@
 	      <property name="label">gtk-ok</property>
 	      <property name="use_stock">True</property>
 	      <property name="relief">GTK_RELIEF_NORMAL</property>
+	      <property name="focus_on_click">True</property>
 	      <property name="response_id">-5</property>
 	    </widget>
 	  </child>
@@ -100,6 +107,7 @@
 		      <property name="label" translatable="yes">_Auto-detect</property>
 		      <property name="use_underline">True</property>
 		      <property name="relief">GTK_RELIEF_NORMAL</property>
+		      <property name="focus_on_click">True</property>
 		      <property name="active">False</property>
 		      <property name="inconsistent">False</property>
 		      <property name="draw_indicator">True</property>
@@ -478,6 +486,14 @@
 			  </child>
 
 			  <child>
+			    <widget class="GtkMenuItem" id="ti84+1">
+			      <property name="visible">True</property>
+			      <property name="label" translatable="yes">TI84+</property>
+			      <property name="use_underline">True</property>
+			    </widget>
+			  </child>
+
+			  <child>
 			    <widget class="GtkMenuItem" id="ti85">
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes">TI85</property>
@@ -497,6 +513,14 @@
 			    <widget class="GtkMenuItem" id="ti89">
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes">TI89</property>
+			      <property name="use_underline">True</property>
+			    </widget>
+			  </child>
+
+			  <child>
+			    <widget class="GtkMenuItem" id="ti89_titanium1">
+			      <property name="visible">True</property>
+			      <property name="label" translatable="yes">TI89 Titanium</property>
 			      <property name="use_underline">True</property>
 			    </widget>
 			  </child>
@@ -597,6 +621,7 @@
 		  <property name="visible">True</property>
 		  <property name="can_focus">True</property>
 		  <property name="relief">GTK_RELIEF_NORMAL</property>
+		  <property name="focus_on_click">True</property>
 		  <signal name="clicked" handler="comm_button_log_clicked" last_modification_time="Mon, 05 Apr 2004 19:02:10 GMT"/>
 
 		  <child>
