@@ -1,7 +1,8 @@
 /*
- * Translatable strings file generated by Glade.
- * Add this file to your project's POTFILES.in.
- * DO NOT compile it as part of your application.
+ * Chaînes de caractères à traduire générées par
+ * Glade. Ajouter ce fichier au fichier POTFILE.in
+ * de votre projet. NE PAS compiler ce fichier
+ * avec le reste de votre application.
  */
 
 gchar *s = N_("Communication Settings");
@@ -29,9 +30,11 @@ gchar *s = N_("TI73");
 gchar *s = N_("TI82");
 gchar *s = N_("TI83");
 gchar *s = N_("TI83+");
+gchar *s = N_("TI84+");
 gchar *s = N_("TI85");
 gchar *s = N_("TI86");
 gchar *s = N_("TI89");
+gchar *s = N_("TI89 Titanium");
 gchar *s = N_("TI92");
 gchar *s = N_("TI92+");
 gchar *s = N_("V200PLT");
