@@ -28,12 +28,12 @@
 */
 
 #ifdef __WIN32__
-# define TILP_VERSION "6.74"		// For Win32
+# define TILP_VERSION "6.75"		// For Win32
 #else
 # define TILP_VERSION VERSION
 #endif
-#define TILP_REQUIRES_LIBFILES_VERSION	"0.5.8"
+#define TILP_REQUIRES_LIBFILES_VERSION	"0.6.1"
 #define TILP_REQUIRES_LIBCABLES_VERSION	"3.8.1"
-#define TILP_REQUIRES_LIBCALCS_VERSION 	"4.5.3"
+#define TILP_REQUIRES_LIBCALCS_VERSION 	"4.5.4"
 
 #endif
